# ofi-pass

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  rust.yml
src/: conf.rs  fuzzel.rs  main.rs  pass.rs  rofi.rs  wofi.rs  wtype.rs
