[package]
name = "ofi-pass"
version = "0.3.1"
edition = "2018"
authors = ["Sereinity <sereinity@online.fr>"]
license = "AGPL-3.0-or-later"
description = "A password promptor for pass"
repository = "https://github.com/sereinity/ofi-pass"
readme = "README.md"
keywords = ["pass", "wofi", "rofi"]
exclude = [
  ".github/*",
]

[dependencies]
directories = "5.0"
walkdir = "2.3"
log = "0.4"

[dev-dependencies]
mocktopus = "0.8.0"
